FEATURE: Core | Torrents created by Azureus now include .utf-8 fields [Parg]
FEATURE: Core | Dynamic piece request queue scaling [Gudy]
FEATURE: Core | Added torrent name to authentication dialog [Parg]
FEATURE: Core | Per-torrent upload speed limits [Nolar,Gudy]
FEATURE: Core | Ability to change the sound played on torrent completion added [Parg]
FEATURE: UI   | 'Download' menu added with start/stop all + pause/resume options [Parg]
FEATURE: UI   | Table col sort order default option added, thanks to Charnobo! [Parg]
FEATURE: UI   | URL Downloader window now support to set-up referrer and saves last used referrers [Parg, Gudy]
FEATURE: UI   | New Statistic page about the disk cache (yeah more CPU consuming graphs) [Gudy]
FEATURE: UI   | Down/Up speed indicators in main view are now double-clickable to open the Stats View [Gudy]
FEATURE: Plug | webui support for torrent encoding choice [Parg]
FEATURE: Plug | tracker torrent stats available via xml/http interface [Parg]

CHANGE: Core | Show time to re-announce/scrape in general view using hh::mm::ss [Parg]
CHANGE: Core | Timeout tracker server operations [Parg]
CHANGE: Core | Torrent opener will now report errors opening torrents better [Parg]
CHANGE: Core | Complete core networking/messaging rewrite [Nolar]
CHANGE: Core | Stop scrape on UDP V2 torrents when download running [Parg]
CHANGE: Core | Refactor of DiskManager [Parg]
CHANGE: Core | Protocol tweaking for significantly reduced discard rates [Nolar]
CHANGE: Core | Tracker now treats port value of 0 as 'explicitly firewalled' [Parg]
CHANGE: Core | Tracker client will revert to "initialised" state after explicit failure from tracker [Parg]
CHANGE: Core | Locale selection changed to show more possible encodings [Parg]
CHANGE: Core | XML stats - downloads ordered by downloading/index then seeding/index [Parg]
CHANGE: Core | Reworked connection establishment to conform to new WinXP SP2 limits [Nolar]