@@ -21,6 +21,7 @@ FEATURE: Core | Dynamic piece request queue scaling [Gudy]
 FEATURE: Core | Added torrent name to authentication dialog [Parg]
 FEATURE: Core | Per-torrent upload speed limits [Nolar,Gudy]
 FEATURE: Core | Ability to change the sound played on torrent completion added [Parg]
+FEATURE: Core | Added session uptime to stats [Nolar]
 FEATURE: UI   | 'Download' menu added with start/stop all + pause/resume options [Parg]
 FEATURE: UI   | Table col sort order default option added, thanks to Charnobo! [Parg]
 FEATURE: UI   | URL Downloader window now support to set-up referrer and saves last used referrers [Parg, Gudy]
